<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/ivTop"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_200"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bg_me_meinv" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNoLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_20"
                            android:text="未登录"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/sp_18"
                            android:textStyle="bold"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <LinearLayout
                            android:id="@+id/llLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|bottom"
                            android:background="?android:selectableItemBackground"
                            android:orientation="horizontal"
                            android:padding="@dimen/dp_16"
                            android:visibility="gone"
                            tools:visibility="visible">

                            <ImageView
                                android:id="@+id/icon"
                                android:layout_width="@dimen/dp_60"
                                android:layout_height="@dimen/dp_60"
                                tools:background="@color/colorPrimary" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/dp_10"
                                android:layout_marginEnd="@dimen/dp_10"
                                android:gravity="start|center">

                                <TextView
                                    android:id="@+id/tvUserName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/color_333333"
                                    android:textSize="@dimen/sp_18"
                                    tools:text="userName" />

                                <TextView
                                    android:id="@+id/tvCoinCount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvUserName"
                                    android:textColor="@color/color_999999"
                                    android:textSize="@dimen/sp_14"
                                    tools:text="当前排名：XXX" />

                                <TextView
                                    android:id="@+id/tvRank"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/tvUserName"
                                    android:layout_marginStart="@dimen/dp_10"
                                    android:layout_marginEnd="@dimen/dp_10"
                                    android:layout_toEndOf="@+id/tvCoinCount"
                                    android:textColor="@color/color_999999"
                                    android:textSize="@dimen/sp_14"
                                    tools:text="总积分:XXX" />
                            </RelativeLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_search"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee" />

                        <TextView
                            android:id="@+id/tvWxArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/common_public_mark"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee" />

                        <TextView
                            android:id="@+id/tvCollect"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/common_collect"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee" />

                        <TextView
                            android:id="@+id/tvPrivateArticles"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_share_article"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee" />

                        <TextView
                            android:id="@+id/tvUserArticle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_user_article"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee" />

                        <TextView
                            android:id="@+id/tvWenda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_q_a"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tvLoginInvalid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_login_invalid"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tvSerialDialog"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_test_thread_dialog"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dp_1"
                            android:background="@color/color_eeeeee"
                            android:visibility="gone"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tvParallelDialog"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?android:selectableItemBackground"
                            android:gravity="start"
                            android:onClick="@{listener::onClick}"
                            android:padding="@dimen/dp_16"
                            android:text="@string/app_test_thread_dialog2"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/sp_16"
                            android:visibility="gone"
                            tools:visibility="visible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvLogout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_marginBottom="@dimen/dp_30"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:gravity="center"
                        android:onClick="@{listener::onClick}"
                        android:padding="@dimen/dp_16"
                        android:text="@string/app_logout"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/sp_16"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <com.ziqi.baselibrary.util.statusbar.view.StatusBarHeightLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/layout_toolbar" />

            </com.ziqi.baselibrary.util.statusbar.view.StatusBarHeightLinearLayout>


        </FrameLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/fragment_me_header"
            app:menu="@menu/menu_me" />

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>